--- a/Minha API/public/site/newpost.html
+++ b/Minha API/public/site/newpost.html
@@ -152,7 +152,7 @@
         var idUsuario = sessionStorage.ID_USUARIO
         var novaDesc = input_desc.value
 
-        if (novaDesc.value == ``) {
+        if (novaDesc.value == "") {
             tudo_certo.innerHTML = `Preecha o campo descrição`
 
             setTimeout(() => {
