--- a/Minha API/public/site/visitar_perfil.html
+++ b/Minha API/public/site/visitar_perfil.html
@@ -440,7 +440,7 @@
                         <div class="titulo_comentario">
                             Comentar
                         </div>
-                        <textarea type="text" id="input_add_comentario" placeholder="Adicione um comentário"></textarea>
+                        <textarea type="text" id="input_add_comentario" maxlength="200" placeholder="Adicione um comentário"></textarea>
                             
 
                             <button onclick="enviar_comentario(${idPost}, ${quem_postou})" id="${quem_postou}">
